--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "Artem Ustimov <artem.ustimov@extern.isban.com>",
   "license": "Apache 2.0",
   "dependencies": {
-    "canvas": "^1.6.12",
+    "canvas": "^2.0.0-alpha.14",
     "d3": "^3.5.17",
     "jsdom": "^12.0.0",
     "when": "^3.7.8"
