--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib",
-    "start": "node --trace-warnings lib/index.js > log"
+    "start": "node --trace-warnings lib/index.js > index.html"
   },
   "author": "Artem Ustimov <artem.ustimov@extern.isban.com>",
   "license": "Apache 2.0",
