--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-red-flow-drawer",
   "version": "0.0.1",
   "description": "A Node-RED flow drawer",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib",
@@ -11,10 +11,11 @@
   "author": "Artem Ustimov <art@ustimov.org>",
   "license": "MIT",
   "bin": {
-    "flow-drawer": "src/cli/index.js"
+    "flow-drawer": "lib/cli/index.js"
   },
   "dependencies": {
     "canvas": "^2.0.0-alpha.14",
+    "commander": "^2.18.0",
     "d3": "^3.5.17",
     "jsdom": "^12.0.0"
   },
