--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "canvas": "^2.0.0-alpha.14",
     "commander": "^2.18.0",
     "d3": "^3.5.17",
-    "jsdom": "^12.0.0"
+    "jsdom": "^12.0.0",
+    "svg-saver-node": "0.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
