--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "node-red-flow-drawer",
   "version": "0.0.2",
   "description": "A Node-RED flow drawer",
-  "main": "lib/flow-drawer.js",
+  "main": "src/flow-drawer.js",
   "scripts": {
-    "build": "babel src -d lib",
-    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -23,7 +21,7 @@
   },
   "homepage": "https://github.com/Ustimov/node-red-flow-drawer",
   "bin": {
-    "flow-drawer": "lib/cli/flow-drawer.js"
+    "flow-drawer": "src/cli/flow-drawer.js"
   },
   "dependencies": {
     "canvas": "^2.0.0-alpha.14",
@@ -31,9 +29,5 @@
     "d3": "^3.5.17",
     "jsdom": "^12.0.0",
     "svg-saver-node": "0.0.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
   }
 }
