--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Node-RED flow drawer",
   "main": "src/flow-drawer.js",
   "scripts": {
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,9 @@
     "d3": "^3.5.17",
     "jsdom": "^12.0.0",
     "svg-saver-node": "0.0.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
