--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: node_js
 node_js:
   - "7"
+addons:
+  apt:
+    packages:
+      - libcairo2-dev
+      - libjpeg-dev
+      - libpango1.0-dev
+      - libgif-dev
+      - build-essential
+      - g++
