--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "commander": "^2.18.0",
     "d3": "^3.5.17",
     "jsdom": "^12.0.0",
+    "mute": "^2.0.6",
     "svg-saver-node": "0.0.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
-    "mute": "^2.0.6"
+    "performance-now": "^2.1.0"
   }
 }
