--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "d3": "^3.5.17",
     "jsdom": "^12.0.0",
     "mute": "^2.0.6",
+    "progress": "^2.0.1",
     "svg-saver-node": "0.0.1"
   },
   "devDependencies": {
