--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-flow-drawer",
-  "version": "0.0.4",
-  "description": "A Node-RED flow drawer",
+  "version": "0.0.5",
+  "description": "A library and CLI for drawning Node-RED flows from JSON files",
   "main": "src/flow-drawer.js",
   "scripts": {
     "test": "mocha"
@@ -25,7 +25,7 @@
     "flow-drawer": "src/cli/flow-drawer.js"
   },
   "dependencies": {
-    "canvas": "^2.0.0-alpha.14",
+    "canvas": "^2.0.1",
     "commander": "^2.18.0",
     "d3": "^3.5.17",
     "jsdom": "^12.0.0",
