--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "eslint": "^5.7.0",
     "mocha": "^5.2.0",
     "performance-now": "^2.1.0"
   }
