--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "jsdom": "^12.0.0",
     "mute": "^2.0.6",
     "progress": "^2.0.1",
-    "svg-saver-node": "0.0.2",
-    "when": "^3.7.8"
+    "svg-saver-node": "0.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
